k8s/pgbouncer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbouncer
  namespace: thecloud
spec:
  replicas: 5
  selector:
    matchLabels:
      app: pgbouncer
  template:
    metadata:
      labels:
        app: pgbouncer
    spec:
      containers:
      - name: pgbouncer
        image: edoburu/pgbouncer:latest
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: "30m"
            memory: "48Mi"
          limits:
            cpu: "100m"
            memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer-service
  namespace: thecloud
spec:
  ports:
  - port: 5432     # Expose as standard PG port internally
    targetPort: 5432
  selector:
    app: pgbouncer
